viz/fast_graph/fastgraphParser.py
# Generated from viz/fast_graph/fastgraph.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class fastgraphParser ( Parser ):

    grammarFileName = "fastgraph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'--['", "','", "']->'", 
                     "':'", "'='", "'['", "']'", "'{'", "';'", "'}'", "'i'", 
                     "'v'", "'x'", "'l'", "'c'", "'d'", "'m'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "EscapedString", "DIGIT", "NUMBER", "INTEGER", "COMMENT", 
                      "LINE_COMMENT", "WS" ]

    RULE_defn = 0
    RULE_triplet = 1
    RULE_node = 2
    RULE_edge = 3
    RULE_stringlist = 4
    RULE_properties = 5
    RULE_value = 6
    RULE_roman = 7
    RULE_units = 8
    RULE_tens = 9
    RULE_hundreds = 10
    RULE_one = 11
    RULE_five = 12
    RULE_ten = 13
    RULE_fifty = 14
    RULE_oneHundred = 15
    RULE_fiveHundred = 16
    RULE_oneThousand = 17

    ruleNames =  [ "defn", "triplet", "node", "edge", "stringlist", "properties", 
                   "value", "roman", "units", "tens", "hundreds", "one", 
                   "five", "ten", "fifty", "oneHundred", "fiveHundred", 
                   "oneThousand" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    EscapedString=20
    DIGIT=21
    NUMBER=22
    INTEGER=23
    COMMENT=24
    LINE_COMMENT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DefnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def triplet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.TripletContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.TripletContext,i)


        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.NodeContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.NodeContext,i)


        def edge(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.EdgeContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.EdgeContext,i)


        def getRuleIndex(self):
            return fastgraphParser.RULE_defn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefn" ):
                listener.enterDefn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefn" ):
                listener.exitDefn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefn" ):
                return visitor.visitDefn(self)
            else:
                return visitor.visitChildren(self)




    def defn(self):

        localctx = fastgraphParser.DefnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_defn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==8:
                self.state = 39
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.triplet()
                    pass

                elif la_ == 2:
                    self.state = 37
                    self.node()
                    pass

                elif la_ == 3:
                    self.state = 38
                    self.edge()
                    pass


                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TripletContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.src = None # Token
            self.edgeId = None # RomanContext
            self.dst = None # Token

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(fastgraphParser.DIGIT)
            else:
                return self.getToken(fastgraphParser.DIGIT, i)

        def roman(self):
            return self.getTypedRuleContext(fastgraphParser.RomanContext,0)


        def NUMBER(self):
            return self.getToken(fastgraphParser.NUMBER, 0)

        def getRuleIndex(self):
            return fastgraphParser.RULE_triplet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriplet" ):
                listener.enterTriplet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriplet" ):
                listener.exitTriplet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTriplet" ):
                return visitor.visitTriplet(self)
            else:
                return visitor.visitChildren(self)




    def triplet(self):

        localctx = fastgraphParser.TripletContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_triplet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(fastgraphParser.T__0)
            self.state = 45
            localctx.src = self.match(fastgraphParser.DIGIT)
            self.state = 46
            self.match(fastgraphParser.T__1)
            self.state = 47
            self.match(fastgraphParser.T__2)
            self.state = 48
            localctx.edgeId = self.roman()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 49
                self.match(fastgraphParser.T__3)
                self.state = 50
                self.match(fastgraphParser.NUMBER)


            self.state = 53
            self.match(fastgraphParser.T__4)
            self.state = 54
            self.match(fastgraphParser.T__0)
            self.state = 55
            localctx.dst = self.match(fastgraphParser.DIGIT)
            self.state = 56
            self.match(fastgraphParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id_ = None # Token
            self.labels = None # StringlistContext
            self.xi = None # StringlistContext

        def properties(self):
            return self.getTypedRuleContext(fastgraphParser.PropertiesContext,0)


        def DIGIT(self):
            return self.getToken(fastgraphParser.DIGIT, 0)

        def stringlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.StringlistContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.StringlistContext,i)


        def getRuleIndex(self):
            return fastgraphParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNode" ):
                return visitor.visitNode(self)
            else:
                return visitor.visitChildren(self)




    def node(self):

        localctx = fastgraphParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_node)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(fastgraphParser.T__0)
            self.state = 59
            localctx.id_ = self.match(fastgraphParser.DIGIT)
            self.state = 60
            self.match(fastgraphParser.T__5)
            self.state = 61
            localctx.labels = self.stringlist()
            self.state = 62
            self.match(fastgraphParser.T__6)
            self.state = 63
            localctx.xi = self.stringlist()
            self.state = 64
            self.properties()
            self.state = 65
            self.match(fastgraphParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id_ = None # RomanContext
            self.labels = None # StringlistContext

        def properties(self):
            return self.getTypedRuleContext(fastgraphParser.PropertiesContext,0)


        def roman(self):
            return self.getTypedRuleContext(fastgraphParser.RomanContext,0)


        def stringlist(self):
            return self.getTypedRuleContext(fastgraphParser.StringlistContext,0)


        def getRuleIndex(self):
            return fastgraphParser.RULE_edge

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge" ):
                listener.enterEdge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge" ):
                listener.exitEdge(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge" ):
                return visitor.visitEdge(self)
            else:
                return visitor.visitChildren(self)




    def edge(self):

        localctx = fastgraphParser.EdgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_edge)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(fastgraphParser.T__7)
            self.state = 68
            localctx.id_ = self.roman()
            self.state = 69
            self.match(fastgraphParser.T__5)
            self.state = 70
            localctx.labels = self.stringlist()
            self.state = 71
            self.properties()
            self.state = 72
            self.match(fastgraphParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EscapedString(self, i:int=None):
            if i is None:
                return self.getTokens(fastgraphParser.EscapedString)
            else:
                return self.getToken(fastgraphParser.EscapedString, i)

        def getRuleIndex(self):
            return fastgraphParser.RULE_stringlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringlist" ):
                listener.enterStringlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringlist" ):
                listener.exitStringlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringlist" ):
                return visitor.visitStringlist(self)
            else:
                return visitor.visitChildren(self)




    def stringlist(self):

        localctx = fastgraphParser.StringlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stringlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(fastgraphParser.T__7)
            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 75
                    self.match(fastgraphParser.EscapedString)
                    self.state = 76
                    self.match(fastgraphParser.T__3) 
                self.state = 81
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 82
                self.match(fastgraphParser.EscapedString)


            self.state = 85
            self.match(fastgraphParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EscapedString(self, i:int=None):
            if i is None:
                return self.getTokens(fastgraphParser.EscapedString)
            else:
                return self.getToken(fastgraphParser.EscapedString, i)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.ValueContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.ValueContext,i)


        def getRuleIndex(self):
            return fastgraphParser.RULE_properties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperties" ):
                listener.enterProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperties" ):
                listener.exitProperties(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProperties" ):
                return visitor.visitProperties(self)
            else:
                return visitor.visitChildren(self)




    def properties(self):

        localctx = fastgraphParser.PropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_properties)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(fastgraphParser.T__9)
            self.state = 95
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 88
                    self.match(fastgraphParser.EscapedString)
                    self.state = 89
                    self.match(fastgraphParser.T__5)
                    self.state = 90
                    self.value()
                    self.state = 91
                    self.match(fastgraphParser.T__10) 
                self.state = 97
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 98
                self.match(fastgraphParser.EscapedString)
                self.state = 99
                self.match(fastgraphParser.T__5)
                self.state = 100
                self.value()


            self.state = 103
            self.match(fastgraphParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return fastgraphParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StringContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fastgraphParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EscapedString(self):
            return self.getToken(fastgraphParser.EscapedString, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class FloatingContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fastgraphParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(fastgraphParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloating" ):
                listener.enterFloating(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloating" ):
                listener.exitFloating(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloating" ):
                return visitor.visitFloating(self)
            else:
                return visitor.visitChildren(self)


    class IntegerContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fastgraphParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(fastgraphParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)



    def value(self):

        localctx = fastgraphParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_value)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                localctx = fastgraphParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(fastgraphParser.EscapedString)
                pass
            elif token in [22]:
                localctx = fastgraphParser.FloatingContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(fastgraphParser.NUMBER)
                pass
            elif token in [23]:
                localctx = fastgraphParser.IntegerContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.match(fastgraphParser.INTEGER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RomanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oneThousand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.OneThousandContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.OneThousandContext,i)


        def hundreds(self):
            return self.getTypedRuleContext(fastgraphParser.HundredsContext,0)


        def tens(self):
            return self.getTypedRuleContext(fastgraphParser.TensContext,0)


        def units(self):
            return self.getTypedRuleContext(fastgraphParser.UnitsContext,0)


        def getRuleIndex(self):
            return fastgraphParser.RULE_roman

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoman" ):
                listener.enterRoman(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoman" ):
                listener.exitRoman(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoman" ):
                return visitor.visitRoman(self)
            else:
                return visitor.visitChildren(self)




    def roman(self):

        localctx = fastgraphParser.RomanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_roman)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 110
                self.oneThousand()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17 or _la==18:
                self.state = 116
                self.hundreds()


            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15 or _la==16:
                self.state = 119
                self.tens()


            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13 or _la==14:
                self.state = 122
                self.units()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.OneContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.OneContext,i)


        def five(self):
            return self.getTypedRuleContext(fastgraphParser.FiveContext,0)


        def ten(self):
            return self.getTypedRuleContext(fastgraphParser.TenContext,0)


        def getRuleIndex(self):
            return fastgraphParser.RULE_units

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnits" ):
                listener.enterUnits(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnits" ):
                listener.exitUnits(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnits" ):
                return visitor.visitUnits(self)
            else:
                return visitor.visitChildren(self)




    def units(self):

        localctx = fastgraphParser.UnitsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_units)
        self._la = 0 # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.one()
                self.state = 134
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 13]:
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==13:
                        self.state = 126
                        self.one()
                        self.state = 131
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass
                elif token in [14]:
                    self.state = 132
                    self.five()
                    pass
                elif token in [15]:
                    self.state = 133
                    self.ten()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.five()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 137
                    self.one()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TensContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ten(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.TenContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.TenContext,i)


        def fifty(self):
            return self.getTypedRuleContext(fastgraphParser.FiftyContext,0)


        def oneHundred(self):
            return self.getTypedRuleContext(fastgraphParser.OneHundredContext,0)


        def getRuleIndex(self):
            return fastgraphParser.RULE_tens

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTens" ):
                listener.enterTens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTens" ):
                listener.exitTens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTens" ):
                return visitor.visitTens(self)
            else:
                return visitor.visitChildren(self)




    def tens(self):

        localctx = fastgraphParser.TensContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tens)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.ten()
                self.state = 154
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 13, 14, 15]:
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==15:
                        self.state = 146
                        self.ten()
                        self.state = 151
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass
                elif token in [16]:
                    self.state = 152
                    self.fifty()
                    pass
                elif token in [17]:
                    self.state = 153
                    self.oneHundred()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.fifty()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 157
                    self.ten()
                    self.state = 162
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HundredsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oneHundred(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fastgraphParser.OneHundredContext)
            else:
                return self.getTypedRuleContext(fastgraphParser.OneHundredContext,i)


        def fiveHundred(self):
            return self.getTypedRuleContext(fastgraphParser.FiveHundredContext,0)


        def oneThousand(self):
            return self.getTypedRuleContext(fastgraphParser.OneThousandContext,0)


        def getRuleIndex(self):
            return fastgraphParser.RULE_hundreds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHundreds" ):
                listener.enterHundreds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHundreds" ):
                listener.exitHundreds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHundreds" ):
                return visitor.visitHundreds(self)
            else:
                return visitor.visitChildren(self)




    def hundreds(self):

        localctx = fastgraphParser.HundredsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_hundreds)
        self._la = 0 # Token type
        try:
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.oneHundred()
                self.state = 174
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 5, 6, 13, 14, 15, 16, 17]:
                    self.state = 169
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==17:
                        self.state = 166
                        self.oneHundred()
                        self.state = 171
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass
                elif token in [18]:
                    self.state = 172
                    self.fiveHundred()
                    pass
                elif token in [19]:
                    self.state = 173
                    self.oneThousand()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.fiveHundred()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 177
                    self.oneHundred()
                    self.state = 182
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return fastgraphParser.RULE_one

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOne" ):
                listener.enterOne(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOne" ):
                listener.exitOne(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOne" ):
                return visitor.visitOne(self)
            else:
                return visitor.visitChildren(self)




    def one(self):

        localctx = fastgraphParser.OneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_one)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(fastgraphParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

